SFDCProject/src/objects/Guided_Sales_Response__c.object
<CustomObject>
    <description>This object is used to store the questions we have asked to a user for a sales record (lead or opty).</description>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <inlineHelpText>Actual answer text as it was answered. This is copied so that if original answer is deleted or modified, we can still view the original answer.</inlineHelpText>
        <label>Answer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Guided_Sales_Answer__c</referenceTo>
        <relationshipLabel>Guided Sales Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <inlineHelpText>This is the actual text of the question as it was asked, just in case that question has been deleted or modified.</inlineHelpText>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to question record.</inlineHelpText>
        <label>Question</label>
        <referenceTo>Guided_Sales_Question__c</referenceTo>
        <relationshipLabel>Guided Sales Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Group__c</fullName>
        <label>Response Group</label>
        <referenceTo>Guided_Sales_Response_Group__c</referenceTo>
        <relationshipLabel>Guided Sales Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Guided Sales Response</label>
    <nameField>
        <displayFormat>GSR-{0000000000}</displayFormat>
        <label>Guided Sales Response#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Sales Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>